--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndrzejShop</string>
+    <string name="app_name">CarDeal2</string>
     <string name="filter">Filtruj</string>
     <string name="sort">Sortuj</string>
     <string name="change_view">Zmień widok</string>
@@ -11,8 +11,8 @@
     <string name="buy">Dodaj do koszyka</string>
 
     <string name="sorting">Sortowanie</string>
-    <string name="title_product">Tytuł</string>
-    <string name="author_product">Autor</string>
+    <string name="title_product">Model</string>
+    <string name="author_product">Marka</string>
     <string name="price_product">Cena</string>
     <string name="category">Kategoria</string>
 
@@ -22,9 +22,9 @@
     <string name="lack">Brak</string>
 
     <!--Categories-->
-    <string name="thriller">Thriller</string>
-    <string name="sci_fi">Science fiction</string>
-    <string name="fantasy">Fantastyka</string>
+    <string name="thriller">Sedan</string>
+    <string name="sci_fi">Sportowe</string>
+    <string name="fantasy">SUV</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -33,9 +33,9 @@
     <string name="title_activity_filter">FilterActivity</string>
 
     <string name="del_cart_title">Usuwanie z koszyka</string>
-    <string name="del_cart_message">Czy na pewno chcesz usunąć pozycję z koszyka?</string>
+    <string name="del_cart_message">Czy na pewno chcesz usunąć auto z koszyka?</string>
     <string name="del_fav_title">Usuwanie z ulubionych</string>
-    <string name="del_fav_message">Czy na pewno chesz usunąć pozycję z ulubionych?</string>
+    <string name="del_fav_message">Czy na pewno chesz usunąć auto z ulubionych?</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
